--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="col-md-3 col-sm-6">
                     <div class="our-team">
                         <div class="pic">
-                            <img src="img/erik.jpg" alt="">
+                            <img src="img/2.jpg" alt="">
                         </div>
                         <div class="team-contenT">
                             <h3 class="title">Erik</h3>
@@ -61,7 +61,7 @@
                 <div class="col-md-3 col-sm-6">
                         <div class="our-team">
                             <div class="pic">
-                                <img src="img/erik.jpg" alt="">
+                                <img src="img/3.jpg" alt="">
                             </div>
                             <div class="team-contenT">
                                 <h3 class="title">Erik</h3>
@@ -79,7 +79,7 @@
                     <div class="col-md-3 col-sm-6">
                             <div class="our-team">
                                 <div class="pic">
-                                    <img src="img/erik.jpg" alt="">
+                                    <img src="img/4.jpg" alt="">
                                 </div>
                                 <div class="team-contenT">
                                     <h3 class="title">Erik</h3>
